update/delete methods for lots
