# docs/swagger.yaml
@@ -16,6 +16,7 @@ definitions:
         type: string
     type: object
   entity.Lot:
+    description: Lot
     properties:
       created_at:
         type: string
@@ -38,6 +39,8 @@ definitions:
       start_price:
         type: integer
       status:
+        type: integer
+      step_price:
         type: integer
       title:
         type: string
@@ -93,6 +96,40 @@ definitions:
           $ref: '#/definitions/entity.User'
         type: array
     type: object
+  v1.lotInput:
+    properties:
+      description:
+        example: Some Precious Items
+        type: string
+      end_at:
+        example: "2022-09-09T13:45:00+03:00"
+        type: string
+      notify:
+        example: true
+        type: boolean
+      start_at:
+        example: "2022-09-09T12:45:00+03:00"
+        type: string
+      start_price:
+        example: 100000
+        type: integer
+      step_price:
+        example: 15000
+        type: integer
+      title:
+        example: 'Lot #1'
+        type: string
+    type: object
+  v1.lotRequest:
+    properties:
+      lot:
+        $ref: '#/definitions/v1.lotInput'
+    type: object
+  v1.lotResponse:
+    properties:
+      lot:
+        $ref: '#/definitions/entity.Lot'
+    type: object
   v1.registerUser:
     properties:
       email:
@@ -115,8 +152,8 @@ definitions:
 host: localhost:8080
 info:
   contact: {}
-  description: Using an api service as an example
-  title: Clean API
+  description: Using an api service
+  title: Auction API
   version: "1.0"
 paths:
   /auth:
@@ -172,6 +209,113 @@ paths:
           schema:
             $ref: '#/definitions/v1.listLotResponse'
       summary: Show lot list
+      tags:
+      - lots
+    post:
+      consumes:
+      - application/json
+      description: create lot
+      operationId: create-lot
+      parameters:
+      - description: Create Lot
+        in: body
+        name: lot
+        required: true
+        schema:
+          $ref: '#/definitions/v1.lotRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      summary: Create lot
+      tags:
+      - lots
+  /lots/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: delete lot
+      operationId: delete-lot
+      parameters:
+      - description: Lot ID
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: Delete lot
+      tags:
+      - lots
+    get:
+      consumes:
+      - application/json
+      description: show lot
+      operationId: lot
+      parameters:
+      - description: Lot ID
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/v1.lotResponse'
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: Show lot
+      tags:
+      - lots
+    patch:
+      consumes:
+      - application/json
+      description: update lot
+      operationId: update-lot
+      parameters:
+      - description: Lot ID
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Update Lot
+        in: body
+        name: lot
+        required: true
+        schema:
+          $ref: '#/definitions/v1.lotRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/v1.lotResponse'
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      summary: Update lot
       tags:
       - lots
   /register:
