# internal/infrastructure/repo/postgres/lot.go
@@ -165,8 +165,8 @@ func (r LotRepo) Update(lot *entity.Lot) error {
 	query := `
 		UPDATE lots
 		SET status = $1, title = $2, description = $3, start_price = $4, end_price = $5, step_price = $6, 
-		creator_id = $7, winner_id = $8, start_at = $9, end_at = $10, notify = $11, updated_at = NOW() 
-		WHERE id = $12
+		creator_id = $7, winner_id = $8, start_at = $9, end_at = $10, notify = $11, destroyed_at = $12, updated_at = NOW() 
+		WHERE id = $13
 		RETURNING updated_at`
 
 	// Create an args slice containing the values for the placeholder parameters.
@@ -182,6 +182,7 @@ func (r LotRepo) Update(lot *entity.Lot) error {
 		&lot.StartAt,
 		&lot.EndAt,
 		&lot.Notify,
+		&lot.DestroyedAt,
 		&lot.ID,
 	}
 
